brand styleguide colors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" prefix="og: http://ogp.me/ns#">
 <head>
-  <title>Theme</title>
+  <title>Jags 2016</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
     <div class="container">
       <a href="#" class="branding">
         <!--<img class="logo" src="#">-->
-        <span class="logo graident1">Bamboo Landing</span>
+        <span class="logo graident1">Jags 2016</span>
       </a><!--/.branding-->
       <nav class="main">
         <ul>
