--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <header class="site">
     <div class="container">
       <a href="#" class="branding">
-        <!--<img class="logo" src="#">-->
-        <span class="logo graident1">Jags 2016</span>
+        <span class="logo">Jags 2016</span>
       </a><!--/.branding-->
       <nav class="main">
         <ul>
@@ -32,7 +31,7 @@
         <div class="col-xs-12 col-md-8 intro">
           <h1 class="title">Some sweet text<br />can go here.</h1>
           <p>And some introductory text that explains about the website. yay!</p>
-          <a class="a-btn" href="#">
+          <a class="a-btn anchor-btn" href="#about">
             <button class="btn btn-large bg-white" type="button">Get Started</button>
           </a>
         </div><!--/.col-->
@@ -63,6 +62,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 text-center">
+          <img src="assets/img/logo-shield.png">
           <h3 clas="title">Word is getting out. We're freakin' awesome.</h3>
           <p>And some introductory text that explains about the website. yay! And some introductory text that explains about the website. yay! And some introductory text that explains about the website. yay! And some introductory text that explains about the website. yay!</p>
         </div><!--/.col-->
@@ -89,6 +89,6 @@
   
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-  <script type="text/javascript" src="assets/js/main.js"></script>
+  <script type="text/javascript" src="assets/js/min/main-min.js"></script>
 </body>
 </html>
