player section centered

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
   <section class="hero section-shorter">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-md-8 intro">
-          <h1 class="title">Some sweet text<br />can go here.</h1>
-          <p>And some introductory text that explains about the website. yay!</p>
-          <a class="a-btn anchor-btn" href="#about">
-            <button class="btn btn-large bg-white" type="button">Get Started</button>
+        <div class="col-xs-12 intro text-center">
+          <h1 class="title">A new era has begun<br />in Jacksonville.</h1>
+          <p>On paper, Dave Caldwell's 2016 draft class has received <a href="http://espn.go.com/nfl/draft2016/insider/story/_/id/15230437/2016-nfl-draft-mel-kiper-grades-draft-class-every-nfl-team" target="_blank">huge praise</a>.<br />Let's take a look at the new faces in Duval.</p>
+          <a class="a-btn anchor-btn" href="#ramsey">
+            <button class="btn btn-large bg-accent" type="button">Meet the picks!</button>
           </a>
         </div><!--/.col-->
       </div><!--/.row-->
@@ -45,8 +45,8 @@
         <div class="row">
           <div class="col-sm-12">
             <ul class="flex sticky-nav">
-              <li><a href="#about">About</a></li>
-              <li><a href="#section2">Section 2</a></li>
+              <li><a href="#ramsey">Jalen Ramsey</a></li>
+              <li><a href="#jack">Myles Jack</a></li>
               <li><a href="#section3">Section 3</a></li>
               <li><a href="#section4">Section 4</a></li>
               <li><a href="#section5">Section 5</a></li>
@@ -58,20 +58,19 @@
     </div><!--/.subnav-->
   </div><!--/.subnav-wrapper-->
   
-  <section class="section about" id="about">
+  <section class="section ramsey" id="ramsey">
     <div class="container">
-      <div class="row">
-        <div class="col-xs-12 text-center">
-          <img src="assets/img/logo-shield.png">
-          <h3 clas="title">Word is getting out. We're freakin' awesome.</h3>
-          <p>And some introductory text that explains about the website. yay! And some introductory text that explains about the website. yay! And some introductory text that explains about the website. yay! And some introductory text that explains about the website. yay!</p>
-        </div><!--/.col-->
-      </div><!--/.row-->
+      <div class="row player-container">
+        <div class="col-xs-12 col-md-6 player-bg"></div>
+        <div class="col-xs-12 col-md-6 player-bio">
+          <h3>Jalen Ramsey</h3>
+          <h5>Pick: Round 1, #5 Overall</h5>
+        </div><!--/.player-bio-->
+      </div><!--/.player-container-->
     </div><!--/.container-->
+  </section><!--/.ramsey-->
   
-  </section>
-  
-  <section class="section two" id="section2">
+  <section class="section jack" id="jack">
   </section>
   <section class="section three" id="section3">
   </section>
