--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
             <ul class="flex sticky-nav snap-menu">
               <li><a href data-panel="ramsey">Jalen Ramsey</a></li>
               <li><a href data-panel="jack">Myles Jack</a></li>
-              <li><a href data-panel="three">Section 3</a></li>
-              <li><a href data-panel="four">Section 4</a></li>
-              <li><a href data-panel="five">Section 5</a></li>
-              <li><a href data-panel="six">Section 6</a></li>
+              <li><a href data-panel="ngakoue">Yannick Ngakoue</a></li>
+              <li><a href data-panel="day">Sheldon Day</a></li>
+              <li><a href data-panel="holmes">Tyrone Holmes</a></li>
+              <li><a href data-panel="allen">Branden Allen</a></li>
+              <li><a href data-panel="woodard">Jonathan Woodard</a></li>
             </ul><!--/.snap-menu-->
           </div><!--/.col-->
         </div><!--/.row-->
@@ -61,18 +62,96 @@
   </div><!--/.subnav-wrapper-->
   
   <section class="section ramsey" data-panel="ramsey">
+    <div class="container">
+      <div class="row player-container">
+        <div class="col-xs-12 col-md-6 player-bg ramsey bg-cover"></div>
+        <div class="col-xs-12 col-md-6 player-bio">
+          <h3>Jalen Ramsey</h3>
+          <h5>Pick: Round 1, #5 Overall</h5>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div><!--/.player-bio-->
+      </div><!--/.player-container-->
+    </div><!--/.container-->
   </section><!--/.ramsey-->
   
   <section class="section jack" data-panel="jack">
-  </section>
-  <section class="section three" data-panel="three">
-  </section>
-  <section class="section four" data-panel="four">
-  </section>
-  <section class="section five" data-panel="five">
-  </section>
-  <section class="section six" data-panel="six">
-  </section>
+    <div class="container">
+      <div class="row player-container">
+        <div class="col-xs-12 col-md-6 player-bg jack bg-cover"></div>
+        <div class="col-xs-12 col-md-6 player-bio">
+          <h3>Myles Jack</h3>
+          <h5>Pick: Round 2, #36 Overall</h5>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div><!--/.player-bio-->
+      </div><!--/.player-container-->
+    </div><!--/.container-->
+  </section><!--/.jack-->
+  
+  <section class="section ngakoue" data-panel="ngakoue">
+    <div class="container">
+      <div class="row player-container">
+        <div class="col-xs-12 col-md-6 player-bg ngakoue bg-cover"></div>
+        <div class="col-xs-12 col-md-6 player-bio">
+          <h3>Yannick Ngakoue</h3>
+          <h5>Pick: Round 3, #69 Overall</h5>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div><!--/.player-bio-->
+      </div><!--/.player-container-->
+    </div><!--/.container-->
+  </section><!--/.ngakoue-->
+  
+  <section class="section day" data-panel="day">
+    <div class="container">
+      <div class="row player-container">
+        <div class="col-xs-12 col-md-6 player-bg day bg-cover"></div>
+        <div class="col-xs-12 col-md-6 player-bio">
+          <h3>Sheldon Day</h3>
+          <h5>Pick: Round 4, #103 Overall</h5>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div><!--/.player-bio-->
+      </div><!--/.player-container-->
+    </div><!--/.container-->
+  </section><!--/.day-->
+  
+  <section class="section holmes" data-panel="holmes">
+    <div class="container">
+      <div class="row player-container">
+        <div class="col-xs-12 col-md-6 player-bg holmes bg-cover"></div>
+        <div class="col-xs-12 col-md-6 player-bio">
+          <h3>Tyrone Holmes</h3>
+          <h5>Pick: Round 6, #181 Overall</h5>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div><!--/.player-bio-->
+      </div><!--/.player-container-->
+    </div><!--/.container-->
+  </section><!--/.holmes-->
+  
+  <section class="section allen" data-panel="allen">
+    <div class="container">
+      <div class="row player-container">
+        <div class="col-xs-12 col-md-6 player-bg allen bg-cover"></div>
+        <div class="col-xs-12 col-md-6 player-bio">
+          <h3>Brandon Allen</h3>
+          <h5>Pick: Round 6, #201 Overall</h5>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div><!--/.player-bio-->
+      </div><!--/.player-container-->
+    </div><!--/.container-->
+  </section><!--/.allen-->
+  
+  <section class="section woodard" data-panel="woodard">
+    <div class="container">
+      <div class="row player-container">
+        <div class="col-xs-12 col-md-6 player-bg woodard bg-cover"></div>
+        <div class="col-xs-12 col-md-6 player-bio">
+          <h3>Jonathan Woodard</h3>
+          <h5>Pick: Round 7, #226 Overall</h5>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div><!--/.player-bio-->
+      </div><!--/.player-container-->
+    </div><!--/.container-->
+  </section><!--/.day-->
+
   
   
   
