--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <header class="site">
     <div class="container">
       <a href="#" class="branding">
-        <span class="logo">Jags 2016</span>
+        <span class="logo">Jaguars 2016</span>
       </a><!--/.branding-->
       <nav class="main">
         <ul>
-          <li><a href="#">Nav Link 1</a></li>
-          <li><a href="#">Nav Link 2</a></li>
-          <li><a href="#">Nav Link 3</a></li>
+          <li><a href="#">Tickets</a></li>
+          <li><a href="#">News</a></li>
+          <li><span class="snap-menu"><a href data-panel="credits">Credits</a></span></li>
         </ul>
       </nav><!--/.main-->
     </div><!--/.container-->
@@ -147,6 +147,17 @@
           <h3>Jonathan Woodard</h3>
           <h5>Pick: Round 7, #226 Overall</h5>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div><!--/.player-bio-->
+      </div><!--/.player-container-->
+    </div><!--/.container-->
+  </section><!--/.day-->
+  
+  <section class="section credits" data-panel="credits">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-6"></div>
+        <div class="col-xs-12 col-md-6">
+          <p>Created by: <a href="http://brianzotoole.com" target="_blank">Brian O'Toole</a></p>
         </div><!--/.player-bio-->
       </div><!--/.player-container-->
     </div><!--/.container-->
