setup nested panels

--- a/index.html
+++ b/index.html
@@ -66,9 +66,24 @@
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg ramsey bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
-          <h3>Jalen Ramsey</h3>
-          <h5>Pick: Round 1, #5 Overall</h5>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          <div class="snap-menu">
+	        <li><a href data-panel="one">1</a></li>
+	        <li><a href data-panel="two">2</a></li>
+	        <li><a href data-panel="three">3</a></li>
+          </div><!--/.snap-menu-->
+          <div class="panels">
+	        <section class="" data-panel="one">
+	          <h3>Jalen Ramsey</h3>
+	          <h5>Pick: Round 2, #36 Overall</h5>
+	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	        </section>
+	        <section class="" data-panel="two">
+	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	        </section>
+	        <section class="" data-panel="three">
+	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	        </section>
+	      </div><!--/.panels-->
         </div><!--/.player-bio-->
       </div><!--/.player-container-->
     </div><!--/.container-->
@@ -177,7 +192,7 @@
     var options = {
       $menu: $('.snap-menu')
     };
-    $('body').panelSnap(options);
+    $('body, .panels').panelSnap(options);
   });
 </script>
 </body>
