switched to full width containers for sections

--- a/index.html
+++ b/index.html
@@ -62,16 +62,12 @@
   </div><!--/.subnav-wrapper-->
   
   <section class="section ramsey" data-panel="ramsey">
-    <div class="container">
+    <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg ramsey bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
-          <div class="snap-menu">
-	        <li><a href data-panel="one">1</a></li>
-	        <li><a href data-panel="two">2</a></li>
-	        <li><a href data-panel="three">3</a></li>
-          </div><!--/.snap-menu-->
           <div class="panels">
+            
 	        <section class="" data-panel="one">
 	          <h3>Jalen Ramsey</h3>
 	          <h5>Pick: Round 2, #36 Overall</h5>
@@ -90,7 +86,7 @@
   </section><!--/.ramsey-->
   
   <section class="section jack" data-panel="jack">
-    <div class="container">
+    <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg jack bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
@@ -103,7 +99,7 @@
   </section><!--/.jack-->
   
   <section class="section ngakoue" data-panel="ngakoue">
-    <div class="container">
+    <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg ngakoue bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
@@ -116,7 +112,7 @@
   </section><!--/.ngakoue-->
   
   <section class="section day" data-panel="day">
-    <div class="container">
+    <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg day bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
@@ -129,7 +125,7 @@
   </section><!--/.day-->
   
   <section class="section holmes" data-panel="holmes">
-    <div class="container">
+    <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg holmes bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
@@ -142,7 +138,7 @@
   </section><!--/.holmes-->
   
   <section class="section allen" data-panel="allen">
-    <div class="container">
+    <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg allen bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
@@ -155,7 +151,7 @@
   </section><!--/.allen-->
   
   <section class="section woodard" data-panel="woodard">
-    <div class="container">
+    <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg woodard bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
@@ -168,7 +164,7 @@
   </section><!--/.day-->
   
   <section class="section credits" data-panel="credits">
-    <div class="container">
+    <div class="container-full">
       <div class="row">
         <div class="col-xs-12 col-md-6"></div>
         <div class="col-xs-12 col-md-6">
