--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col-xs-12 intro text-center">
           <h1 class="title">A new era has begun<br />in Jacksonville.</h1>
-          <p>On paper, Dave Caldwell's 2016 draft class has received <a href="http://espn.go.com/nfl/draft2016/insider/story/_/id/15230437/2016-nfl-draft-mel-kiper-grades-draft-class-every-nfl-team" target="_blank">huge praise</a>.<br />Let's take a look at the new faces in Duval.</p>
+          <p>The Jaguars' 2016 draft class has received <a href="http://espn.go.com/nfl/draft2016/insider/story/_/id/15230437/2016-nfl-draft-mel-kiper-grades-draft-class-every-nfl-team" target="_blank">top grades</a>.<br />Let's take a look at the new faces in Jacksonville.</p>
           <span class="snap-menu">
             <a class="a-btn anchor-btn" href data-panel="ramsey">
               <button class="btn btn-large bg-accent" type="button">Meet the picks!</button>
@@ -66,19 +66,22 @@
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg ramsey bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
-          <div class="panels">
-            
-	        <section class="" data-panel="one">
+          <div class="panels hide-scroll">      
+	        <section data-panel="one">
 	          <h3>Jalen Ramsey</h3>
-	          <h5>Pick: Round 2, #36 Overall</h5>
+	          <h5>Pick: Round 1, #5 Overall</h5>
 	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	        </section>
-	        <section class="" data-panel="two">
+	        </section><!--/.one-->
+	        <section data-panel="two">
+	          <h3>Section 2</h3>
+	          <h5>fdfasdfd</h5>
 	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	        </section>
-	        <section class="" data-panel="three">
+	        </section><!--/.two-->
+	        <section data-panel="three">
+	          <h3>Section 3</h3>
+	          <h5>fdfasdfd</h5>
 	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	        </section>
+	        </section><!--/.three-->
 	      </div><!--/.panels-->
         </div><!--/.player-bio-->
       </div><!--/.player-container-->
@@ -90,9 +93,23 @@
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg jack bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
-          <h3>Myles Jack</h3>
-          <h5>Pick: Round 2, #36 Overall</h5>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          <div class="panels hide-scroll">      
+	        <section data-panel="one">
+	          <h3>Myles Jack</h3>
+	          <h5>Pick: Round 2, #36 Overall</h5>
+	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	        </section><!--/.one-->
+	        <section data-panel="two">
+	          <h3>Section 2</h3>
+	          <h5>fdfasdfd</h5>
+	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	        </section><!--/.two-->
+	        <section data-panel="three">
+	          <h3>Section 3</h3>
+	          <h5>fdfasdfd</h5>
+	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	        </section><!--/.three-->
+	      </div><!--/.panels-->
         </div><!--/.player-bio-->
       </div><!--/.player-container-->
     </div><!--/.container-->
